--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,17 @@
 asgiref==3.5.2
+astroid==2.12.5
+atomicwrites==1.4.1
+attrs==19.3.0
+beautifulsoup4==4.11.1
+certifi==2019.9.11
 cffi==1.15.0
+chardet==3.0.4
+colorama==0.4.4
 Django==4.1
-isort==5.10.1
+django-cors-headers==3.13.0
+django-debug-toolbar==2.2
+djangorestframework==3.13.1
+Faker==8.10.0
 flake8==4.0.1
 flake8-broken-line==0.4.0
 flake8-isort==4.1.1
@@ -9,20 +19,50 @@ flake8-plugin-utils==1.3.2
 flake8-polyfill==1.0.2
 flake8-return==1.1.3
 gunicorn==20.0.4
+idna==2.8
+importlib-metadata==4.12.0
+iniconfig==1.1.1
+isort==5.10.1
 jedi==0.18.0
-lazy-object-proxy==1.6.0
+lazy-object-proxy==1.7.1
+lxml==4.9.1
+Markdown==3.4.1
 mccabe==0.6.1
+mixer==7.1.2
+more-itertools==8.2.0
+numpy==1.23.2
 packaging==21.0
+pandas==1.4.3
+parso==0.8.3
 pkgconfig==1.5.5
 platformdirs==2.4.0
+pluggy==0.13.1
 psycopg2-binary==2.8.6
+py==1.8.1
 pybind11==2.8.0
+pycodestyle==2.8.0
 pycparser==2.21
+pyflakes==2.4.0
 pylint==2.11.1
 pyparsing==2.4.7
 PySDL2==0.9.7
+pytest==5.3.5
+pytest-django==3.8.0
+pytest-pythonpath==0.7.3
+python-dateutil==2.8.1
+pytz==2022.2.1
+requests==2.22.0
 six==1.16.0
+sorl-thumbnail==12.6.3
+soupsieve==2.3.2.post1
 sqlparse==0.4.2
+testfixtures==6.18.5
+text-unidecode==1.3
 toml==0.10.2
-typed-ast==1.4.3
-typing-extensions==3.10.0.2
+typed-ast==1.5.4
+typing-extensions==4.3.0
+tzdata==2022.2
+urllib3==1.26.12
+wcwidth==0.2.5
+wrapt==1.14.1
+zipp==3.8.1
