--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,13 @@
 asgiref==3.5.2
-astroid==2.12.5
-atomicwrites==1.4.1
+astroid==2.8.6
+async-generator==1.10
+atomicwrites==1.4.0
 attrs==19.3.0
 beautifulsoup4==4.11.1
-certifi==2019.9.11
+certifi==2022.6.15
 cffi==1.15.0
 chardet==3.0.4
+charset-normalizer==2.1.1
 colorama==0.4.4
 Django==4.1
 django-cors-headers==3.13.0
@@ -19,18 +21,21 @@ flake8-plugin-utils==1.3.2
 flake8-polyfill==1.0.2
 flake8-return==1.1.3
 gunicorn==20.0.4
+h11==0.13.0
+html5lib==1.1
 idna==2.8
 importlib-metadata==4.12.0
 iniconfig==1.1.1
 isort==5.10.1
 jedi==0.18.0
-lazy-object-proxy==1.7.1
+lazy-object-proxy==1.6.0
 lxml==4.9.1
 Markdown==3.4.1
 mccabe==0.6.1
 mixer==7.1.2
 more-itertools==8.2.0
 numpy==1.23.2
+outcome==1.2.0
 packaging==21.0
 pandas==1.4.3
 parso==0.8.3
@@ -46,23 +51,31 @@ pyflakes==2.4.0
 pylint==2.11.1
 pyparsing==2.4.7
 PySDL2==0.9.7
+PySocks==1.7.1
 pytest==5.3.5
 pytest-django==3.8.0
 pytest-pythonpath==0.7.3
 python-dateutil==2.8.1
 pytz==2022.2.1
-requests==2.22.0
+requests==2.28.1
+selenium==4.4.3
 six==1.16.0
+sniffio==1.2.0
 sorl-thumbnail==12.6.3
+sortedcontainers==2.4.0
 soupsieve==2.3.2.post1
 sqlparse==0.4.2
 testfixtures==6.18.5
 text-unidecode==1.3
 toml==0.10.2
-typed-ast==1.5.4
-typing-extensions==4.3.0
+trio==0.21.0
+trio-websocket==0.9.2
+typed-ast==1.4.3
+typing-extensions==3.10.0.2
 tzdata==2022.2
 urllib3==1.26.12
-wcwidth==0.2.5
-wrapt==1.14.1
-zipp==3.8.1
+wcwidth==0.1.8
+webencodings==0.5.1
+wrapt==1.13.3
+wsproto==1.2.0
+zipp==2.2.0
